--- a/public/scss/_navbar.scss
+++ b/public/scss/_navbar.scss
@@ -17,6 +17,9 @@
 }
 
 .navbar {
+    position: sticky;
+    top: 0;
+    z-index: 100;
     a {
         color: rgba(255, 255, 255, 0.7);
         text-decoration: none;
