--- a/public/css/style.css
+++ b/public/css/style.css
@@ -288,7 +288,7 @@ a:hover {
   height: 100%;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1441px) {
   .slide-cont {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
@@ -305,6 +305,16 @@ a:hover {
     grid-template-rows: 1fr;
     gap: 0px 0px;
     grid-template-areas: ". slide-texto slide-texto slide-img slide-img slide-img";
+    height: 60vmin;
+  }
+}
+@media (max-height: 1440px) {
+  .slide-cont {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    gap: 0px 0px;
+    grid-template-areas: "slide-texto slide-texto slide-img slide-img slide-img";
     height: 60vmin;
   }
 }
