--- a/public/scss/_banners.scss
+++ b/public/scss/_banners.scss
@@ -179,7 +179,7 @@
 }
 
 
-@media (min-width: 1200px) {
+@media (min-width: 1441px) {
     .slide-cont {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
@@ -202,6 +202,17 @@
         grid-template-areas:
             ". slide-texto slide-texto slide-img slide-img slide-img";
 
+        height: 60vmin;
+    }
+}
+
+@media (max-height: 1440px) {
+    .slide-cont {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr;
+        gap: 0px 0px;
+        grid-template-areas: "slide-texto slide-texto slide-img slide-img slide-img";
         height: 60vmin;
     }
 }
