calculadora, footer, tiendas

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -10,6 +10,7 @@ $ro: #C03851;
 $gr: #E4E4E4;
 $bl: #ffffff;
 
+
 // Colores
 
 .bl {
@@ -381,3 +382,5 @@ h4 {
 @import 'navbar';
 
 @import 'calculadora';
+
+@import 'footer';
