--- a/public/scss/_calculadora.scss
+++ b/public/scss/_calculadora.scss
@@ -51,10 +51,10 @@
         border-bottom: 1px solid;
         border-radius: 0;
         padding-top: 0;
-    }
 
-    input[type="range"] {
-        height: 15px;
+        outline: 0px !important;
+        -webkit-appearance: none;
+        box-shadow: none !important;
     }
 
     .input-cont {
@@ -68,4 +68,47 @@
         }
     }
 
+    input[type="radio"] {
+        background-color: $bl;
+        border: .0625em solid rgba(105, 105, 105, 0.5);
+        border-radius: 50%;
+        box-shadow: inset 0 0 0 0 white;
+        cursor: pointer;
+        font: inherit;
+        height: 1.5em;
+        outline: none;
+        width: 1.5em;
+        -moz-appearance: none;
+        -webkit-appearance: none;
+
+        &:checked {
+            background-color: $a2;
+            box-shadow: inset 0 0 0 .1875em $bl;
+            -webkit-transition: background .15s, box-shadow .1s;
+            transition: background .15s, box-shadow .1s;
+        }
+    }
+
+    input[type="range"] {
+        margin-top: 4px;
+        height: 10px;
+        -webkit-appearance: none;
+        background: #ffffff;
+        outline: none;
+        overflow: hidden;
+        border: 0;
+        box-shadow: inset 0 0 5px rgba(255, 255, 255, 1);
+
+        &::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            width: 15px;
+            height: 15px;
+            background: $a2;
+            cursor: pointer;
+            box-shadow: -407px 0 0 400px $a3;
+            transform: skew(-25deg, 0deg);
+            border: 0;
+        }
+
+    }
 }
