--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -55,6 +55,7 @@ header {
 
 a {
     text-decoration: none;
+
     &:hover {
         text-decoration: none;
     }
@@ -77,7 +78,7 @@ a {
     padding: 15px;
     border: 0;
     margin: 15px 0;
-    
+
     &:hover {
         color: $am;
     }
@@ -384,3 +385,9 @@ h4 {
 @import 'calculadora';
 
 @import 'footer';
+
+.img-carro {
+    height: 348px;
+    width: 348px;
+    background-size: cover;
+}
